scrolling alignment among other ui fixes

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -462,12 +462,12 @@ body.scrolled
       top 3px
       font-size .62em
       transition all .1s ease-out
-      padding-top 6px
+      padding-top 4px
   header
     height header-scrolled-height
     .container
       .tools
-        top 16px
+        top 15px
         .container menu
           padding 0
           margin 0
@@ -510,7 +510,7 @@ body.scrolled
         bottom 10px
   .main-content
     .breadcrumb
-      top (header-scrolled-height+3)
+      top header-scrolled-height
       transition top .2s bounce
   footer
     opacity 1
